# auto-backup-linux

./: PUBLISH.md  README.md  STRUCTURE.md  TROUBLESHOOTING.md  __init__.py  cli.py  config.py  example.py  manager.py  pyproject.toml  pyproject.toml.poetry  setup.py
auto_backup/: __init__.py
